--- a/aws-dynamo-db-service/src/main/resources/application.properties
+++ b/aws-dynamo-db-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=aws-dynamo-db-service
 
-accessKey=AKIA4GAZZDOIFYWCS44Y
-secretKey=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
+accessKey=test
+secretKey=test
